@@ -1,5 +1,10 @@
 2005-01-31  Mark McLoughlin  <mark@skynet.ie>
 
+	* lib/dirmonitor.py: disconnect from gamin when
+	stopping the monitor.
+
+2005-01-31  Mark McLoughlin  <mark@skynet.ie>
+
 	* lib/dirmonitor.py: remove all watches when
 	stopping monitoring.
 
